edited copy and added 'pick' indicator to gradient bar

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,8 @@ $font-sans: 'Hanken Grotesk', system-ui, -apple-system, sans-serif;
 // ---------------- Color primitives ---------------------------
 $white: #ffffff;
 $white-70: hsla(0, 0%, 100%, 0.7);
+$white-50: hsla(0, 0%, 100%, 0.5);
+$white-40: hsla(0, 0%, 100%, 0.4);
 $white-15: hsla(0, 0%, 100%, 0.15);
 $white-10: hsla(0, 0%, 100%, 0.1);
 $white-6: hsla(0, 0%, 100%, 0.06);
